--- a/views/actors.ejs
+++ b/views/actors.ejs
@@ -10,6 +10,13 @@
     <h1>Actors Page</h1>
     <% if (actors) { %> <%actors.forEach(actors => {%>
     <h2><%= actors.name %></h2>
-    <%})%> <%}%> <%- include('layout/footer') %>
+    <%})%> <%}%> 
+    <h3>Add New Actor</h3>
+    <form action="/actors/addActor" method="post">
+      <label for="actorName">Actor Name:</label>
+      <input type="text" name="actorName" id="actorName">
+      <button type="submit">Submit</button>
+    </form>
+    <%- include('layout/footer') %>
   </body>
 </html>
