--- a/views/genres.ejs
+++ b/views/genres.ejs
@@ -8,8 +8,11 @@
   <body>
     <%- include('layout/header') %>
     <h1>Genres Page</h1>
-    <% if (genres) { %> <%genres.forEach(genres => {%>
-    <h2><%= genres.name %></h2>
+    <% if (genres) { %> <%genres.forEach(genre => {%>
+      <div style="display: inline-flex; align-items: center; gap: 0.5rem; margin-right: 1rem;">
+        <h2 style="margin: 0;"><%= genre.name %></h2>
+        <button id="deleteGenre" data-id="<%= genre.id %>">x</button>
+      </div>
     <%})%> <%}%> 
     <h3>Add New Genre</h3>
     <form action="/genres/addGenre" method="post">
@@ -19,4 +22,38 @@
     </form>
     <%- include('layout/footer') %>
   </body>
+
+  <script>
+    const deleteGenreBtns = document.querySelectorAll("#deleteGenre");
+
+    deleteGenreBtns.forEach(button => {
+      button.addEventListener("click", async () => {
+        const genreId = button.dataset.id;
+        console.log(JSON.stringify({ id: genreId}))
+        if (!confirm("Are you sure you want to delete this genre? It will also delete all the movies related with it.")) return;
+
+        try {
+          const res = await fetch('/genres/deleteGenre', {
+            method: 'POST',
+            headers: {
+              'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({id: genreId})
+          });
+
+          const data = await res.json();
+          console.log(data)
+
+          if (data.success) {
+            window.location.reload();
+          } else {
+            console.error("Server error:", data.message)
+          }
+
+        } catch (error) {
+          console.error("Error deleting genre:", error)
+        }
+      })
+    })
+  </script>
 </html>
