--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -12,6 +12,7 @@
     <h2><%= movie.name %></h2>
     <h3><%= movie.genre %></h3>
     <h3><%= movie.actors.join(', ') %></h3>
+    <a href="/movie/<%= movie.id %>">Movie Link</a>
     <%})%> <%}%> 
 
     <h3>Add New Movie</h3>
