--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -97,7 +97,7 @@
       const nameTitle = movieCard.querySelector(".movieNameTitle");
       const genreTitle = movieCard.querySelector(".movieGenreTitle");
       const actorsTitle = movieCard.querySelector(".movieActorsTitle");
-      const editForm = movieCard.querySelector(".editMovieForm"); // make sure you have this in your HTML!
+      const editForm = movieCard.querySelector(".editMovieForm");
 
       if (nameTitle.style.display !== "none") {
         nameTitle.style.display = "none";
